# fix-text

./: .copier-answers.yml  README.md  pyproject.toml
scripts/: release.sh
src/fix_text/: __main__.py  cli.py
tests/: test_cli.py
